plugins {
	id 'java'
	id 'org.springframework.boot' version '4.0.0'
}

ext {
	set('springCloudVersion', "2025.1.1")
}

subprojects {

	apply plugin: 'java'
	apply plugin: 'java-library'
	apply plugin: 'org.springframework.boot'

	java {
		toolchain {
			languageVersion = JavaLanguageVersion.of(25)
		}
	}

	repositories {
		mavenCentral()
	}

	dependencies {
		implementation platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
		implementation platform("org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}")
		compileOnly platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
		annotationProcessor platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
		testImplementation platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES)
		compileOnly 'org.projectlombok:lombok'
		annotationProcessor 'org.projectlombok:lombok'
		annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
		testImplementation 'org.springframework.boot:spring-boot-starter-test'
	}

	test {
		useJUnitPlatform()
		maxHeapSize = "1024m"
	}

	bootRun {
		enabled = false
	}

	bootJar {
		enabled = false
	}

	bootBuildImage {
		enabled = false
	}
}

bootRun {
	enabled = false
}

bootJar {
	enabled = false
}

bootBuildImage {
	enabled = false
}